--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -30,7 +30,7 @@ nav {
 
 #MainPage {
   height: 100vh;
-  display: flex;
+  display: none; //change this back!
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -73,11 +73,23 @@ nav {
         background: #86aba9;
         color: white;
         border: none;
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
 }
 
+#ResultPage {
+  display: flex;
+}
+
+#GetStarted {
+  &:hover {
+    cursor: pointer;
+  }
+}
 //classes
 
 .flex-end {
