--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -30,7 +30,7 @@ nav {
 
 #MainPage {
   height: 100vh;
-  display: none; //change this back!
+  display: flex; //change this back!
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -81,8 +81,19 @@ nav {
   }
 }
 
-#ResultPage {
+#ResultContent {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  p {
+    width: 50%;
+  }
+  img {
+    margin: 2rem;
+    border-radius: 15px;
+  }
 }
 
 #GetStarted {
