--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -94,6 +94,21 @@ nav {
     margin: 2rem;
     border-radius: 15px;
   }
+  button {
+    padding: 0.2rem;
+    margin: 1.5rem 1rem;
+    font-size: 1.5rem;
+    color: white;
+    background: #d13d3d;
+    border-radius: 7px;
+    border: none;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+#ResultText {
+  font-size: 1.2rem;
 }
 
 #GetStarted {
@@ -109,3 +124,5 @@ nav {
   align-items: center;
   font-size: 1.5rem;
 }
+
+// media styling
