--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -126,3 +126,112 @@ nav {
 }
 
 // media styling
+
+@media screen and (max-width: 1150px) {
+  #ResultContent {
+    p {
+      width: 62%;
+    }
+  }
+
+  @media screen and (max-width: 1000px) {
+    #ResultContent {
+      p {
+        width: 68%;
+      }
+    }
+  }
+  @media screen and (max-width: 900px) {
+    #ResultContent {
+      img {
+        height: 80%;
+        width: 80%;
+      }
+      p {
+        width: 76%;
+      }
+    }
+  }
+  @media screen and (max-width: 810px) {
+    #ResultContent {
+      img {
+        height: 40%;
+        width: 90%;
+      }
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    #ResultContent {
+      img {
+        height: 48%;
+        width: 91%;
+      }
+      p {
+        width: 76%;
+      }
+    }
+  }
+  @media screen and (max-width: 650px) {
+    #ResultContent {
+      img {
+        height: 33%;
+        width: 85%;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+  }
+  @media screen and (max-width: 550px) {
+    #ResultContent {
+      img {
+        height: 28%;
+        width: 80%;
+      }
+      p {
+        font-size: 0.9rem;
+      }
+    }
+  }
+  @media screen and (max-width: 500px) {
+    #ResultContent {
+      img {
+        height: 27%;
+        width: 90%;
+      }
+      p {
+        font-size: 0.8rem;
+      }
+    }
+  }
+  @media screen and (max-width: 425px) {
+    #ResultContent {
+      img {
+        height: 26%;
+        width: 95%;
+      }
+      p {
+        font-size: 0.7rem;
+        width: 91%;
+      }
+    }
+
+    @media screen and (max-width: 325px) {
+    }
+    nav {
+      padding: 3rem;
+      padding-left: 5.5rem;
+    }
+    #ResultContent {
+      img {
+        height: 22%;
+        width: 96%;
+      }
+      p {
+        width: 92%;
+      }
+    }
+  }
+}
+// @media screen and (max-width: px) {}
