primed for additional media styling (HP and QP)

--- a/styles/Main.scss
+++ b/styles/Main.scss
@@ -124,8 +124,11 @@ nav {
   align-items: center;
   font-size: 1.5rem;
 }
+// media styling for HomePage
 
-// media styling
+// media styling for QuestionsPage
+
+// media styling for ResultContent
 
 @media screen and (max-width: 1150px) {
   #ResultContent {
