--- a/styles/Main.css
+++ b/styles/Main.css
@@ -39,7 +39,7 @@ nav {
   flex-direction: column;
 }
 #MainPage #MainContent img {
-  margin: 2rem;
+  margin: 4rem;
   border-radius: 15px;
 }
 #MainPage #MainContent button {
@@ -56,7 +56,8 @@ nav {
   display: none;
 }
 #QuestionsPage #QuestionsContent {
-  width: 50%;
+  width: 100%;
+  padding: 1rem;
 }
 #QuestionsPage #QuestionsContent #Questions {
   display: flex;
@@ -64,18 +65,6 @@ nav {
 }
 #QuestionsPage #QuestionsContent #Questions h1 {
   margin-bottom: 1rem;
-}
-#QuestionsPage #QuestionsContent #Questions button {
-  margin: 1rem 0rem;
-  padding: 0.8rem;
-  border-radius: 10px;
-  font-size: 1.5rem;
-  background: #86aba9;
-  color: white;
-  border: none;
-}
-#QuestionsPage #QuestionsContent #Questions button:hover {
-  cursor: pointer;
 }
 
 #ResultContent {
@@ -113,6 +102,19 @@ nav {
   cursor: pointer;
 }
 
+.answer-btn {
+  margin: 1rem 0rem;
+  padding: 0.8rem;
+  border-radius: 10px;
+  font-size: 1.3rem;
+  background: #86aba9;
+  color: white;
+  border: none;
+}
+.answer-btn:hover {
+  cursor: pointer;
+}
+
 .flex-end {
   display: flex;
   justify-content: flex-end;
@@ -120,6 +122,58 @@ nav {
   font-size: 1.5rem;
 }
 
+@media screen and (max-width: 900px) {
+  #MainContent img {
+    height: 65%;
+    width: 80%;
+  }
+}
+@media screen and (max-width: 900px) and (max-width: 685px) {
+  #MainContent h1 {
+    font-size: 1.6rem;
+    padding: 1rem;
+  }
+}
+@media screen and (max-width: 900px) and (max-width: 450px) {
+  #MainContent {
+    margin-bottom: 5rem;
+  }
+  #MainContent h1 {
+    padding-left: 3rem;
+  }
+  #MainContent img {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 900px) and (max-width: 350px) {
+  #MainContent h1 {
+    margin-top: 7rem;
+    font-size: 1.2rem;
+  }
+}
+@media screen and (max-width: 750px) {
+  #QuestionsContent {
+    margin-bottom: 3rem;
+  }
+  #QuestionsContent h1 {
+    font-size: 1.8rem;
+  }
+}
+@media screen and (max-width: 750px) and (max-width: 525px) {
+  #QuestionsContent h1 {
+    font-size: 1.2rem;
+    margin-top: 5rem;
+  }
+}
+@media screen and (max-width: 750px) and (max-width: 375px) {
+  .answer-btn {
+    margin: 0.5rem;
+  }
+
+  .flex-end {
+    padding-top: 2rem;
+  }
+}
 @media screen and (max-width: 1150px) {
   #ResultContent p {
     width: 62%;
@@ -182,6 +236,9 @@ nav {
   }
 }
 @media screen and (max-width: 1150px) and (max-width: 425px) {
+  #ResultContent h1 {
+    padding: 1rem;
+  }
   #ResultContent img {
     height: 26%;
     width: 95%;
